--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -323,8 +323,8 @@
 }
 
 .tokenMythosReckoning {
-    width: 2.5vw;
-    height: 2.5vw;
+    width: 2.2vw;
+    height: 2.2vw;
     background-image: url(/src/pictures/Tokens/TokenMythosReckoning.png);
     background-color: transparent;
     background-size: contain;
@@ -332,6 +332,7 @@
     background-position: center;
     margin: 0.2vw;
     margin-right: 0.5vw;
+    margin-bottom: 0.5vw;
     border: none;
     border-radius: 50%;
     transition: all .3s ease; 
@@ -343,14 +344,15 @@
 }
 
 .tokenMythosDone {
-    width: 2.3vw;
-    height: 2.3vw;
+    width: 2vw;
+    height: 2vw;
     background-image: url(/src/pictures/Tokens/TokenDone.png);
     background-color: transparent;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     margin: 0.2vw;
+    margin-top: 0.4vw;
     margin-left: 0.5vw;
     border: 0.15vw solid black;
     border-radius: 50%;
