--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -58,9 +58,10 @@
     height: 3.3vw;
     background-color: transparent;
     text-align: center;
-    font-family: BirminghamBold;
+    font-family: EldritchNumbers;
     font-size: 2.6vw;
     margin: 0.5vw;
+    padding-top: 0.4vw;
     border: 0.15vw solid black;
     border-radius: 1vw;
 }
@@ -227,7 +228,7 @@
     background-image: url(/src/pictures/Tokens/TokenHealth.png);
     background-color: transparent;
     background-size: cover;
-    margin-left: 0.5vw;
+    /* margin-left: 0.3vw; */
     width: 1.15vw;
     height: 1.1vw;
     border: none;
@@ -238,10 +239,10 @@
     width: 1.6vw;
     height: 1vw;
     border: none;
-    margin-right: 0.4vw;
-    margin-bottom: 0.1vw;
+    margin-right: 1.2vw;
+    padding-top: 0.1vw;
     text-align: center;
-    font-family: BirminghamBold;
+    font-family: EldritchNumbers;
     font-size: 0.98vw;
 }
 
@@ -331,7 +332,8 @@
     background-repeat: no-repeat;
     background-position: center;
     margin: 0.2vw;
-    margin-right: 0.5vw;
+    margin-left: 0.25vw;
+    margin-right: 0.25vw;
     margin-bottom: 0.5vw;
     border: none;
     border-radius: 50%;
@@ -353,7 +355,8 @@
     background-position: center;
     margin: 0.2vw;
     margin-top: 0.4vw;
-    margin-left: 0.5vw;
+    margin-left: 0.25vw;
+    margin-right: 0.25vw;
     border: 0.15vw solid black;
     border-radius: 50%;
     transition: all .3s ease; 
@@ -362,6 +365,113 @@
 
 .tokenMythosDone:hover {
     transform: scale(1.2);
+}
+
+.tokenMythosClue {
+    width: 2.2vw;
+    height: 2.2vw;
+    background-image: url(/src/pictures/Tokens/TokenClueFaded.png);
+    background-color: transparent;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0.2vw;
+    margin-left: 0.25vw;
+    margin-right: 0.25vw;
+    margin-bottom: 0.5vw;
+    border: none;
+    border-radius: 50%;
+    text-align: center;
+    font-family: EldritchNumbers;
+    padding-top: 0.1vw;
+    font-size: 1.5vw;
+    transition: all .3s ease; 
+    cursor: pointer;
+}
+
+.tokenMythosClue:hover {
+    transform: scale(1.2);
+}
+
+.mythosEldritchDiv{
+    display: flex;
+    z-index: 10;
+}
+
+.mythosAddons{
+    align-self: center;
+    background-color: rgba(238, 238, 215, 0.716);
+    margin: 0.1vw;
+    display: flex;
+    justify-items: center;
+    border: 0.15vw solid black;
+    border-radius: 1vw;
+    height: 0.8vw;
+    width: 2.5vw;
+    position: relative;
+    bottom: 2.1vw;
+    left: 1.9vw;
+}
+
+.mythosTokenMinus {
+    background-image: url(/src/pictures/Tokens/TokenMinus.png);
+    background-color: transparent;
+    align-self: center;
+    background-color: rgba(238, 238, 215, 0.716);
+    background-size: cover;
+    align-self: center;
+    border-radius: 50%;
+    border: 0.1vw;
+    margin-right: 0.5vw;
+    width: 0.8vw;
+    height: 0.8vw;
+    position: relative;
+    bottom: 1vw;
+    right: 1.7vw;
+    cursor: pointer;
+}
+
+.mythosEldritch {
+    background-image: url(/src/pictures/Tokens/TokenEldritch.png);
+    background-color: transparent;
+    background-size: cover;
+    margin-left: 0.4vw;
+    width: 0.73vw;
+    height: 0.7vw;
+    margin-top: 0.05vw;
+    border: none;
+    align-items: center;
+}
+
+.mythosCounter {
+    background-color: transparent;
+    width: 0.8vw;
+    height: 0.8vw;
+    border: none;
+    margin-left: 0.1vw;
+    margin-right: 0.1vw;
+    margin-top: 0.05vw;
+    text-align: center;
+    font-family: EldritchNumbers;
+    font-size: 0.75vw;
+}
+
+.mythosTokenPlus {
+    background-image: url(/src/pictures/Tokens/TokenPlus.png);
+    background-color: transparent;
+    align-self: center;
+    background-color: rgba(238, 238, 215, 0.716);
+    background-size: cover;
+    align-self: center;
+    border-radius: 50%;
+    border: 0.1vw;
+    margin-right: 0.5vw;
+    width: 0.8vw;
+    height: 0.8vw;
+    position: relative;
+    bottom: 3.1vw;
+    left: 2.3vw;
+    cursor: pointer;
 }
 
 #MythosNG1 {
@@ -398,4 +508,8 @@
 
 #MythosHG1 {
     background-image: url(/src/pictures/Mythos/Mythos_HG1.png);
+}
+
+#MythosEB1 {
+    background-image: url(/src/pictures/Mythos/Mythos_EB1.png);
 }
