--- a/src/InteractiveCards/InteractiveCards.css
+++ b/src/InteractiveCards/InteractiveCards.css
@@ -36,10 +36,22 @@
     transform: scale(1.05);
 }
 
-.cthulhuMysteryFront:focus {
-    transform: scale(4) translateY(50%);
-    z-index: 100;
+.cthulhuMysteryFrontFocus {
+    height: 31.5vw;
+    width: 50vw;
+    background-size: cover;
+    border: 0.3vw black solid;
+    border-radius: 1.5vw;
 }
+
+.popup-overlay:has(.cthulhuMysteryFrontFocus) {
+    background: none;
+}
+
+.popup-content:has(.cthulhuMysteryFrontFocus) {
+    width: 50vw;
+}
+
 
 /* COUNTER MYSTERIES */
 
@@ -304,12 +316,30 @@
 }
 
 .mythosFront:hover {
-    transform: scale(1.05) 
+    transform: scale(1.05);
 }
 
-.mythosFront:focus {
+/* .mythosFront:focus {
     transform: scale(3.8) translateY(7%);
+} */
+
+
+.mythosFrontFocus {
+    height: 45vw;
+    width: 28.5vw;
+    background-size: cover;
+    border: 0.3vw black solid;
+    border-radius: 1.5vw;
 }
+
+.popup-overlay:has(.mythosFrontFocus) {
+    background: none;
+}
+
+.popup-content:has(.mythosFrontFocus) {
+    width: 28.5vw;
+}
+
 
 /* .mythosFrontBig {
     height: 11.5vw;
@@ -410,6 +440,15 @@
     font-family: EldritchNumbers;
     padding-top: 0.2vw;
     font-size: 1.2vw;
+}
+
+#tokenMythosEldritchFadedFocus {
+    width: 6.5vw;
+    height: 6.5vw;
+    margin-left: 1vw;
+    margin-top: 16vw;
+    padding-top: 1vw;
+    font-size: 5vw;
 }
 
 .outerPopupMythos {
